# manforge

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  WORKPLAN.md  plan.md  pyproject.toml
benchmarks/: RESULTS.json  RESULTS.md  bench_autodiff.py
examples/: crosscheck_umat_advanced.py  crosscheck_umat_external.py  example_fit_j2.py  example_fortran_uniaxial.py  example_j2_uniaxial.py  example_ow_convergence.py  example_verify_j2_analytical.py
fortran/: README.md  abaqus_stubs.f90  j2_isotropic_3d.f90  mock_kinematic.f90  test_basic.f90  umat_j2.f90  wrapper.f90
src/manforge/: __init__.py  __main__.py  _typing.py  cli.py
src/manforge/autodiff/: backend.py  operators.py
src/manforge/core/: __init__.py  dimension.py  jacobian.py  material.py  residual.py  result.py  solver.py  (+5 more)
tests/: conftest.py  test_af_kinematic.py  test_analytical_j2.py  test_augmented_residual.py  test_compare_solvers.py  test_convergence_history.py  test_driver_step_results.py  test_fitting.py  test_fortran_basic.py  test_fortran_umat.py  test_j2_elastic.py  test_j2_plastic.py  test_jacobian_blocks.py  test_material_bases.py  test_multidim_return_mapping.py  test_operators.py  test_ow_kinematic.py  test_return_mapping_result.py  test_smooth.py  test_stress_driver.py  test_stress_state.py  test_tangent_fd.py  test_umat_verifier.py  test_verification.py
tests/benchmarks/: README.md
tests/e2e/: test_cli_build.py  test_cli_clean.py  test_cli_list.py
tests/fixtures/: implicit_models.py  strain_vectors.py  stubs.py
tests/fortran/: conftest.py  test_compare_solvers.py  test_fortran_basic.py  test_fortran_umat.py  test_j2_bindings.py  test_param_order_contract.py  test_test_cases.py  test_umat_crosscheck.py  test_umat_verifier.py
tests/integration/: conftest.py  test_af_specific.py  test_analytical_j2.py  test_augmented_residual.py  test_convergence_history.py  test_dlambda_override.py  test_driver_iter_run.py  test_driver_step_results.py  test_driver_with_integrator.py  test_j2_elastic.py  test_j2_plastic.py  test_kinematic_dim_consistency.py  test_kinematic_models.py  test_mixed_driver.py  test_multidim_return_mapping.py  test_ow_specific.py  test_partial_implicit.py  test_stress_driver.py  test_verification.py
tests/slow/: conftest.py  test_fitting.py
tests/unit/: test_af_kinematic_unified.py  test_case_result_base_converged.py  test_compare_jacobians.py  test_crosscheck_case_result_trajectory.py  test_dimension.py  test_dlambda_validation.py  test_driver_initial_state.py  test_field_history_helpers.py  test_fortran_registry.py  test_iter_compare_solvers.py  test_jacobian_blocks.py  test_material_bases.py  test_operators.py  test_residual_name.py  test_return_mapping_result.py  test_smooth.py  test_solver_nonconverged.py  test_state_fields.py  test_stress_field.py  test_stress_integrator.py  test_stress_residual.py  test_stress_state.py  test_voigt.py
(+73 files in other folders)
