[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manforge"
version = "0.1.0"
description = "Framework for validating Fortran UMAT constitutive models with JAX autodiff"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Toru Inaba"},
]
requires-python = ">=3.10"
dependencies = [
    "jax[cpu]>=0.4.20",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]
examples = ["matplotlib"]
fortran = ["meson>=1.10.2", "ninja>=1.13.0"]

[project.urls]
Homepage = "https://github.com/toruinaba/manforge"
Repository = "https://github.com/toruinaba/manforge"

[project.scripts]
manforge = "manforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/manforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (fitting/optimization) -- deselect with -m 'not slow'",
    "fortran: marks tests requiring compiled Fortran modules -- deselect with -m 'not fortran'",
]
